--- a/index.html
+++ b/index.html
@@ -1,34 +1,4 @@
-const colors = {
-  green: {
-    wrapperBackground: "#E6E1C3",
-    headerBackground: "#C1C72C",
-    headerColor: "black",
-    photoBorderColor: "#black"
-  },
-  blue: {
-    wrapperBackground: "#5F64D3",
-    headerBackground: "#26175A",
-    headerColor: "white",
-    photoBorderColor: "#73448C"
-  },
-  pink: {
-    wrapperBackground: "#879CDF",
-    headerBackground: "#FF8374",
-    headerColor: "white",
-    photoBorderColor: "#FEE24C"
-  },
-  red: {
-    wrapperBackground: "#DE9967",
-    headerBackground: "#870603",
-    headerColor: "white",
-    photoBorderColor: "white"
-  }
-};
-
-// let userFavColor = "red";
-
-function generateHTML(color) {
-  return `<!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en">
      <head>
         <meta charset="UTF-8" />
@@ -54,7 +24,7 @@ function generateHTML(color) {
            height: 100%;
            }
            .wrapper {
-           background-color: ${colors[color].wrapperBackground};
+           background-color: #5F64D3;
            padding-top: 100px;
            }
            body {
@@ -96,8 +66,8 @@ function generateHTML(color) {
            display: flex;
            justify-content: center;
            flex-wrap: wrap;
-           background-color: ${colors[color].headerBackground};
-           color: ${colors[color].headerColor};
+           background-color: #26175A;
+           color: white;
            padding: 10px;
            width: 95%;
            border-radius: 6px;
@@ -108,7 +78,7 @@ function generateHTML(color) {
            border-radius: 50%;
            object-fit: cover;
            margin-top: -75px;
-           border: 6px solid ${colors[color].photoBorderColor};
+           border: 6px solid #73448C;
            box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
            }
            .photo-header h1, .photo-header h2 {
@@ -151,8 +121,8 @@ function generateHTML(color) {
            .card {
              padding: 20px;
              border-radius: 6px;
-             background-color: ${colors[color].headerBackground};
-             color: ${colors[color].headerColor};
+             background-color: #26175A;
+             color: white;
              margin: 20px;
            }
 
@@ -172,7 +142,62 @@ function generateHTML(color) {
               zoom: .75; 
             } 
            }
-        </style>`
-}
-
-module.exports = generateHTML;
+        </style>
+      </head>
+      <body>
+      <div class="wrapper">
+        <div class="container">
+          <div class="photo-header">
+            <img src="https://avatars0.githubusercontent.com/u/56814339?v=4" alt="image">
+            <h1>Hi!</h1>
+            <h2>My name is Mle529</h2>
+            <h5 class = "company">Currently @ null</h5>
+            <div class="links-nav">
+              <div class="nav-link">
+              <i class="fas fa-location-arrow"></i>
+              <a href="https://www.google.com/maps/place/Irvine, CA">Irvine, CA</a>
+              </div>
+              <div class="nav-link">
+                <i class="fab fa-github-alt"></i>
+                <a href="https://github.com/Mle529">GitHub</a>
+              </div>
+              <div class="nav-link">
+                <i class="fas fa-blog"></i>
+                <a href="">Blog</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="main">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <h2>Currently attending UCI Coding Bootcamp.</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="card col">
+                <h2>Public Repositories</h2>
+                <h3>13</h3>
+              </div>
+              <div class="card col">
+                <h2>Followers</h2>
+                <h3>1</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="card col">
+                <h2>GitHub Stars</h2>
+                <!--arbitrary value-->
+                <h3>1</h3>
+              </div>
+              <div class="card col">
+                <h2>Following</h2>
+                <h3>undefined</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+    </html>
